<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<artifactId>pic-sure-api</artifactId>
		<groupId>edu.harvard.hms.dbmi.avillach</groupId>
		<version>2.0.0-SNAPSHOT</version>
	</parent>
	<artifactId>pic-sure-api-war</artifactId>
	<packaging>war</packaging>
	<name>PIC-SURE API war</name>
	<properties>
		<argLine>--add-modules jdk.incubator.httpclient</argLine>
	</properties>
	<dependencies>
		<dependency>
			<groupId>edu.harvard.hms.dbmi.avillach</groupId>
			<artifactId>pic-sure-api-data</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>edu.harvard.hms.dbmi.avillach</groupId>
			<artifactId>pic-sure-resource-api</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt</artifactId>
		</dependency>
		
		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
		</dependency>

		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-core</artifactId>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<configuration>
					<failOnMissingWebXml>false</failOnMissingWebXml>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>9</source>
					<target>9</target>
					<compilerArgument>--add-modules=jdk.incubator.httpclient</compilerArgument>
				</configuration>
			</plugin>
		</plugins>

	</build>
</project>
